--- a/c3localsns_frontend/package.json
+++ b/c3localsns_frontend/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.21.0",
     "core-js": "^3.6.5",
+    "discord-oauth2": "^2.6.0",
     "session": "^0.1.0",
     "vue": "^3.0.3",
     "vue-axios": "^3.2.0",
