--- a/c3localsns_frontend/package.json
+++ b/c3localsns_frontend/package.json
@@ -8,9 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@mdi/font": "^5.8.55",
     "axios": "^0.21.0",
+    "bulma": "^0.9.1",
     "core-js": "^3.6.5",
     "discord-oauth2": "^2.6.0",
+    "node-sass": "^5.0.0",
+    "sass-loader": "^10.1.0",
     "session": "^0.1.0",
     "vue": "^3.0.3",
     "vue-axios": "^3.2.0",
