--- a/c3localsns_frontend/package.json
+++ b/c3localsns_frontend/package.json
@@ -20,12 +20,14 @@
     "vue-axios": "^3.2.0",
     "vue-cookies": "^1.7.4",
     "vue-router": "^4.0.0-0",
-    "vue-session": "^1.0.0"
+    "vue-session": "^1.0.0",
+    "vuex": "^4.0.0-0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-plugin-router": "^4.5.9",
+    "@vue/cli-plugin-vuex": "^4.5.9",
     "@vue/cli-service": "~4.5.0",
     "@vue/compiler-sfc": "^3.0.0",
     "babel-eslint": "^10.1.0",
