--- a/c3LocalSNS_Backend/Pipfile
+++ b/c3LocalSNS_Backend/Pipfile
@@ -14,6 +14,8 @@ coreapi = "*"
 django-cors-headers = "*"
 djangorestframework-simplejwt = "*"
 dj-rest-auth = "*"
+pylint = "*"
+redis = "*"
 
 [dev-packages]
 
